--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,12 +4,15 @@ html(lang="ko")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    <script src="https://kit.fontawesome.com/77c0cb9fdb.js" crossorigin="anonymous"></script>
     title MuTube | 
   body
-    header
-      h1 We Tube 입니다!
+    //- header
+    include ../partials/header.pug
+    //- main
     main
       block content
-    footer
-      span &copy; MuTube
+    //- footer
+    include ../partials/footer.pug
+
     
