local 전역변수 사용

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -5,7 +5,7 @@ html(lang="ko")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     <script src="https://kit.fontawesome.com/77c0cb9fdb.js" crossorigin="anonymous"></script>
-    title MuTube | 
+    title #{siteName} | 
   body
     //- header
     include ../partials/header.pug
