--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -4,6 +4,6 @@ header.header
   .header__column
     ul
       li
-        a(href="#") Join
+        a(href=routes.Join) Join
       li
-        a(href="#") Login
+        a(href=routes.Login) Login
