--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,4 +1,13 @@
 extends layouts/main
 
 block content
-  p Hello editProfile
+  .form-container
+    form(action=`/users${routes.editProfile}`, method="post")
+      label(for="avatar") Avatar
+      input(type="file", name="avatar", id="avatar")
+      input(type="text", placeholder="Name", name="name")
+      input(type="text", placeholder="Nickname", name="nickname")
+      input(type="email", placeholder='Email', name="email")
+      input(type="submit", value="확인")
+    a.form-container__link(href=`/users${routes.changePassword}`) 비밀번호 변경
+
