--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -1,4 +1,9 @@
 extends layouts/main
 
 block content
-  p Hello editVideo
+  .form-container
+    form(action=`/videos${routes.editVideo}`, method="post")
+      input(type="text", name="title", placeholder="제목")
+      textarea(name="description", placeholder="내용")
+      input(type="submit", value="확인")
+    a.form-container__link.form-container__link--delete(href=`/videos${routes.deleteVideo}`) 삭제
