--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,4 +1,10 @@
 extends layouts/main
 
 block content
-  p Hello upload
+  .form-container
+    form(action=routes.upload, method="post")
+      label(for="file") 비디오 파일
+      input(type="file", name="file", id="file")
+      input(type="text", name="title", placeholder="제목")
+      textarea(name="description", placeholder="내용")
+      input(type="submit", value="업로드")
