--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,7 +8,15 @@ header.header
       input(type="text", placeholder="Search.." name="search_word")
   .header__column
     ul
-      li
-        a(href=routes.join) Join
-      li
-        a(href=routes.login) Login
+      if !user.idCheck
+        li
+          a(href=routes.join) 회원가입
+        li
+          a(href=routes.login) 로그인
+      else
+        li
+          a(href=routes.upload) 업로드
+        li
+          a(href=routes.userDetail(user.id)) 프로필
+        li
+          a(href=routes.logout) 로그아웃
