--- a/views/join.pug
+++ b/views/join.pug
@@ -3,11 +3,11 @@ extends layouts/main
 block content
   .form-container
     form(action=routes.join, method="post")
-      input(type="text", name="name", placeholder="Your Name")
-      input(type="text", name="nickname", placeholder="Nickname")
-      input(type="email", name="email", placeholder="Email@")
-      input(type="password", name="password", placeholder="Password")
-      input(type="password", name="password2", placeholder="Check Password")
+      input(type="text", name="name", placeholder="Your Name" required=true)
+      input(type="text", name="nickname", placeholder="Nickname" required=true)
+      input(type="email", name="email", placeholder="Email@" required=true)
+      input(type="password", name="password", placeholder="Password" required=true)
+      input(type="password", name="password2", placeholder="Check Password" required=true)
       input(type="submit", value="Join")
     
     include partials/socialLogin
