--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,4 +1,10 @@
 extends layouts/main
 
 block content
-  p Hello videoDetail
+  .video__player
+    video(src=`/${video.fileUrl}`,controls=true)
+  .video__info
+    a(href=routes.editVideo) 수정
+    h5.video__title=video.title
+    span.video__views=video.views
+    p.video__description=video.description
