--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -2,8 +2,8 @@ extends layouts/main
 
 block content
   .form-container
-    form(action=`/videos${routes.editVideo}`, method="post")
-      input(type="text", name="title", placeholder="제목")
-      textarea(name="description", placeholder="내용")
+    form(action=routes.editVideo(video.id), method="post")
+      input(type="text", name="title", placeholder="제목", value=video.title)
+      textarea(name="description", placeholder="내용")=video.description
       input(type="submit", value="확인")
     a.form-container__link.form-container__link--delete(href=`/videos${routes.deleteVideo}`) 삭제
