--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -6,4 +6,4 @@ block content
       input(type="text", name="title", placeholder="제목", value=video.title)
       textarea(name="description", placeholder="내용")=video.description
       input(type="submit", value="확인")
-    a.form-container__link.form-container__link--delete(href=`/videos${routes.deleteVideo}`) 삭제
+    a.form-container__link.form-container__link--delete(href=routes.deleteVideo(video.id)) 삭제
