videoBlock.pug에 id를 같이 넘겨줘야함
검색한 비디오 클릭시 비디오 상세화면으로 이동해야 하는데 그 값은 a(href=routes.videoDetail(video.id))
와 같이 id값을 받아야 함

--- a/views/search.pug
+++ b/views/search.pug
@@ -5,9 +5,12 @@ block content
   .search__header
     h3 검색 : #{search_word}
   .search__videos
+    if videos.length === 0
+      h5 검색한 값을 찾지 못했습니다. #{search_word}
     each video in videos
       +videoBlock({
         title:video.title,
         views:video.views,
-        videoFile:video.videoFile
+        videoFile:video.videoFile,
+        id:video.id
       })
