--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,7 @@
 @import '/config/_variables.scss';
+@import '/config/reset.scss';
+@import 'main.scss';
 
+@import 'partials/header';
 body {
-  background-color: $testColor;
 }
