.header~ 클래스마다 id태그 부여 css 처리하기 위해
화면 줄어들었을때 거기에 맞는 css class 부여를 위해 id태그 부여

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,10 @@
 header.header
-  .header__wrapper
-    .header__column
+  .header__wrapper#header__wrapper
+    .header__column#header__icon
       a(href=routes.home)
         i.fab.fa-youtube
     .header__column#header__search
+      //- i.fas.fa-arrow-left
       form(action=routes.search, method="get")
         input(type="text" placeholder="검색" name="search_word")
     .header__column#header__menu
@@ -26,3 +27,4 @@ header.header
             a(href=routes.userDetail(user.id)) 프로필
           li
             a(href=routes.logout) 로그아웃
+        
