검색버튼에 뒤로가기 icon 추가 및 id부여(클릭 이벤트처리)

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -4,7 +4,8 @@ header.header
       a(href=routes.home)
         i.fab.fa-youtube
     .header__column#header__search
-      //- i.fas.fa-arrow-left
+      a(href="#")#arrow-click.header__column-noshow
+        i.fas.fa-arrow-left
       form(action=routes.search, method="get")
         input(type="text" placeholder="검색" name="search_word")
     .header__column#header__menu
