--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -5,7 +5,6 @@
   .header {
     background-color: $red;
     margin-bottom: 50px;
-
     .header__wrapper {
       padding: 5px 0px;
       width: 100%;
@@ -68,7 +67,8 @@
       width: 100%;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      // grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: 30% 40% 30%;
       align-items: center;
       .header__column {
         //home
@@ -125,7 +125,7 @@
       width: 100%;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: 30% 40% 30%;
       align-items: center;
       .header__column {
         //home
@@ -179,9 +179,16 @@
       width: 100%;
       .header__column {
         display: flex;
+        align-items: center;
         justify-content: center;
+        i {
+          color: white;
+          font-size: 30px;
+          padding: 5px 0px;
+          padding-right: 15px;
+        }
         form {
-          width: 75%;
+          width: 70%;
           input {
             padding: 7px 15px;
             width: 100%;
@@ -193,6 +200,9 @@
               color: rgba(0, 0, 0, 0.7);
             }
           }
+        }
+        a {
+          display: block;
         }
       }
     }
@@ -208,12 +218,6 @@
     margin-left: 0px;
   }
 }
-
-//width 1024px 보다 작을 경우 검색창 숨기고 icon으로 검색 버튼 생성하도록
-.header__column-noshow {
-  display: none;
-}
-
 //창이 클 경우 생성된 검색버튼 숨기도록
 .ul-list {
   li {
@@ -221,4 +225,8 @@
       display: none;
     }
   }
+}
+//width 758px 보다 작을 경우 검색창 숨기고 icon으로 검색 버튼 생성하도록
+.header__column-noshow {
+  display: none;
 }
