아이콘 수정 및 텍스트 수정

--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -2,8 +2,8 @@
   button.social-login__github
     span
       i.fab.fa-github
-    |with Github
+    |Github 로그인
   button.social-login__gmail
     span
-      i.fab.fa-gmail
-    |with Gmail
+      i.fab.fa-google
+    |Gmail 로그인
