--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -2,7 +2,7 @@ header.header
   .header__wrapper#header__wrapper
     .header__column#header__icon
       a(href=routes.home)
-        i.fab.fa-youtube
+        i.fas.fa-headphones
     .header__column#header__search
       a(href="#")#arrow-click.header__column-noshow
         i.fas.fa-arrow-left
