--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
   .footer__icon 
-    i.fas.fa-play-circle
+    i.fas.fa-headphones
   span.footer__text &copy; #{new Date().getFullYear()} #{siteName}
