--- a/views/join.pug
+++ b/views/join.pug
@@ -3,12 +3,12 @@ extends layouts/main
 block content
   .form-container
     form(action=routes.join, method="post")
-      input(type="text", name="name", placeholder="Your Name" required=true)
-      input(type="text", name="nickname", placeholder="Nickname" required=true)
+      input(type="text", name="name", placeholder="이름" required=true)
+      input(type="text", name="nickname", placeholder="닉네임" required=true)
       input(type="email", name="email", placeholder="Email@" required=true)
-      input(type="password", name="password", placeholder="Password" required=true)
-      input(type="password", name="password2", placeholder="Check Password" required=true)
-      input(type="submit", value="Join")
-    
+      input(type="password", name="password", placeholder="비밀번호" required=true)
+      input(type="password", name="password2", placeholder="비밀번호 확인" required=true)
+      input(type="submit", value="가입")
+      input(type="button", value="취소", onclick="history.back(-1)")
     include partials/socialLogin
       
