--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,3 +2,6 @@
 @import 'config/reset.scss';
 @import 'main.scss';
 @import 'partials/header';
+@import 'partials/footer.scss';
+@import 'partials/form.scss';
+@import 'partials/socialLogin.scss';
