--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -1,9 +1,17 @@
 @import '../mixin';
+//검색 icon
+#search__click {
+  background-color: rgba(0, 0, 0, 0);
+  border: 0px;
+}
 
 // OK
 @include mobile {
   .header {
-    background-color: $red;
+    background: #56ccf2; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2f80ed, #56ccf2); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2f80ed, #56ccf2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     margin-bottom: 50px;
     .header__wrapper {
       padding: 5px 0px;
@@ -43,7 +51,7 @@
           input {
             padding: 7px 15px;
             width: 100%;
-            border-radius: 3px;
+            border-radius: 8px;
             font-size: 14px;
             color: black;
             &::placeholder {
@@ -59,7 +67,10 @@
 // OK
 @include tablet {
   .header {
-    background-color: $red;
+    background: #56ccf2; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2f80ed, #56ccf2); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2f80ed, #56ccf2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     margin-bottom: 50px;
 
     .header__wrapper {
@@ -101,7 +112,7 @@
           input {
             padding: 7px 15px;
             width: 100%;
-            border-radius: 3px;
+            border-radius: 8px;
             font-size: 14px;
             color: black;
             &::placeholder {
@@ -117,7 +128,10 @@
 // OK
 @include desktop {
   .header {
-    background-color: $red;
+    background: #56ccf2; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2f80ed, #56ccf2); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2f80ed, #56ccf2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     margin-bottom: 50px;
 
     .header__wrapper {
@@ -158,7 +172,7 @@
           input {
             padding: 7px 15px;
             width: 100%;
-            border-radius: 3px;
+            border-radius: 8px;
             font-size: 14px;
             color: black;
             &::placeholder {
@@ -192,7 +206,7 @@
           input {
             padding: 7px 15px;
             width: 100%;
-            border-radius: 3px;
+            border-radius: 8px;
             font-size: 14px;
             color: black;
             &::placeholder {
