--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -15,3 +15,16 @@ main {
   margin: 0 auto;
   min-height: 70vh;
 }
+
+input,
+button {
+  padding: 7px 15px;
+  width: 100%;
+  border-radius: 8px;
+  font-size: 14px;
+  color: black;
+  &::placeholder {
+    font-weight: 300;
+    color: rgba(0, 0, 0, 0.7);
+  }
+}
