--- a/views/join.pug
+++ b/views/join.pug
@@ -5,7 +5,7 @@ block content
     form(action=routes.join, method="post")
       input(type="text", name="name", placeholder="이름" required=true)
       input(type="text", name="nickname", placeholder="닉네임" required=true)
-      input(type="email", name="email", placeholder="Email@" required=true)
+      input(type="email", name="email", placeholder="이메일@" required=true)
       input(type="password", name="password", placeholder="비밀번호" required=true)
       input(type="password", name="password2", placeholder="비밀번호 확인" required=true)
       input(type="submit", value="가입")
