--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -9,5 +9,6 @@ block content
       input(type="text", placeholder="Nickname", name="nickname")
       input(type="email", placeholder='Email', name="email")
       input(type="submit", value="확인")
-    a.form-container__link(href=`/users${routes.changePassword}`) 비밀번호 변경
+    a.form-container__link(href=`/users${routes.changePassword}`) 
+      button 비밀번호 변경
 
