--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -208,6 +208,7 @@
           width: 70%;
           display: flex;
           align-items: center;
+          justify-content: center;
           input {
             padding: 7px 15px;
             width: 100%;
@@ -235,6 +236,10 @@
     color: white;
     font-size: 25px;
     margin-left: 0px;
+  }
+  button {
+    padding: 0;
+    margin-right: 10px;
   }
 }
 //창이 클 경우 생성된 검색버튼 숨기도록
