--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -3,8 +3,9 @@ extends layouts/main
 block content
   .form-container
     form(action=`/users${routes.editProfile}`, method="post")
-      label(for="avatar") Avatar
-      input(type="file", name="avatar", id="avatar")
+      div.fileUpload
+        label(for="avatar") 프로필 사진 업로드 : 
+        input(type="file", name="avatar", id="avatar")
       input(type="text", placeholder="Name", name="name")
       input(type="text", placeholder="Nickname", name="nickname")
       input(type="email", placeholder='Email', name="email")
