--- a/views/upload.pug
+++ b/views/upload.pug
@@ -3,8 +3,9 @@ extends layouts/main
 block content
   .form-container
     form(action=`${routes.videos}${routes.upload}`, method="post", enctype="multipart/form-data")
-      label(for="file") 비디오 파일
-      input(type="file", name="videoFile", id="file", required=true, accept="video/*")
+      div.fileUpload
+        label(for="file") 파일 업로드 : 
+        input(type="file", name="videoFile", id="file", required=true, accept="video/*")
       input(type="text", name="title", placeholder="제목", required=true)
       textarea(name="description", placeholder="내용", required=true)
       input(type="submit", value="업로드")
