--- a/assets/scss/partials/form.scss
+++ b/assets/scss/partials/form.scss
@@ -7,14 +7,15 @@
     width: 100%;
     max-width: 320px;
 
-    input {
+    input:not([type='file']),
+    .fileUpload {
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       width: 100%;
       &:not(:last-child) {
         margin-bottom: 25px;
       }
       &:last-child {
-        margin-bottom: 25px;
+        margin-bottom: 20px;
       }
     }
     textarea {
@@ -36,5 +37,19 @@
   }
   button {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
+  .fileUpload {
+    display: flex;
+    align-items: center;
+    label {
+      margin-right: 10px;
+    }
+    label,
+    input {
+      font-weight: 300;
+    }
+    input {
+      width: 50%;
+    }
   }
 }
