--- a/assets/scss/config/reset.scss
+++ b/assets/scss/config/reset.scss
@@ -127,7 +127,15 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-a {
+a:link {
+  color: black;
+  text-decoration: none;
+}
+a:visited {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
   text-decoration: none;
 }
 
