--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -2,11 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
   button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     max-width: 320px;
     &:not(:last-child) {
       margin-bottom: 10px;
@@ -18,7 +16,7 @@
     font-weight: 600;
   }
   .social-login__github,
-  .social-login__gmail {
+  .social-login__google {
     background: #232526; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #414345, #232526); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -35,5 +33,11 @@
     margin-bottom: 20px;
     border: 0.5px solid rgba(0, 0, 0, 0.3);
     max-width: 320px;
+  }
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
   }
 }
