프로필 경로 수정 , user->loggedUser 로 이름변경
프로필은 local에 이미 user가 등록되어 있기 때문에 user.id를 같이 넘겨줄 필요가 없어서 me라는 라우터 경로를 따로 만듬

res.locals.user -> res.locals.loggedUser 이유 :
기존에 미들웨어에서 res.locals.user로 했을 경우 user는 글로벌 변수로 오버라이딩 문제로  다른 아이디 경로 입력시에도 기존에 있던 프로필만 보이게됨을 해결

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -10,7 +10,7 @@ header.header
         input(type="text" placeholder="검색" name="search_word")
     .header__column#header__menu
       ul#ul-list
-        if !user
+        if !loggedUser
           li
             button(type="button")#search__click
               i.fas.fa-search
@@ -25,7 +25,7 @@ header.header
           li
             a(href=`${routes.videos}${routes.upload}`) 업로드
           li
-            a(href=routes.userDetail(user.id)) 프로필
+            a(href=routes.me) 프로필
           li
             a(href=routes.logout) 로그아웃
         
