--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,16 +1,17 @@
 .social-login
   hr
-  button.social-login__github
+  button.social-login__github#social-login__github
     a(href=routes.github)
       span
         i.fab.fa-github
       |Github 로그인
-  button.social-login__facebook
-    a(href=routes.facebook)  
+  button.social-login__facebook#social-login__facebook
+    //- a(href=routes.facebook)
+    a(href=routes.login)  
       span
         i.fab.fa-facebook
       |Facebook 로그인
-  button.social-login__google
+  button.social-login__google#social-login__google
     a(href=routes.google)
       span
         i.fab.fa-google
