--- a/views/login.pug
+++ b/views/login.pug
@@ -5,5 +5,5 @@ block content
     form(action=routes.login, method="post")
       input(type="email", name="email", placeholder="Email@" required=true)
       input(type="password", name="password", placeholder="Password" required=true)
-      input(type="submit", value="Login")
+      input(type="submit", value="로그인")
     include partials/socialLogin
