--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,7 +23,7 @@ textarea,
   width: 100%;
   max-width: 320px;
   border: none;
-  border-radius: 8px;
+  border-radius: 5px;
   font-size: 14px;
   color: black;
   font-weight: 600;
@@ -40,7 +40,7 @@ textarea,
 // 비디오 디테일 버튼 css
 .video__info {
   button {
-    background-color: #2f80ed;
+    background-color: #368dff;
     color: white;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
