--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -1,10 +1,9 @@
 extends layouts/main
 
 block content
-  .fomr-container
+  .form-container
     form(action=`/users${routes.changePassword}`, method="post")
       input(type="password", name="oldPassword", placeholder="현재 비밀번호")
       input(type="password", name="newPassword", placeholder="새로운 비밀번호")
       input(type="password", name="checkPassword", placeholder="새로운 비밀번호 확인")
       input(type="submit", value="확인")
-
