userDetail.scss 추가 작성 / 프로필 이미지 avatar.scss 추가 작성

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,6 @@
 @import 'config/variables';
 @import 'config/reset.scss';
+@import 'config/avatar.scss';
 
 @import 'main.scss';
 
@@ -10,3 +11,4 @@
 @import 'partials/videoBlock.scss';
 @import 'pages/videoDetail.scss';
 @import 'pages/home.scss';
+@import 'pages/userDetail.scss';
