--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -3,5 +3,11 @@ extends layouts/main
 block content
   .user-profile
     .user-profile__header
-      img.avatar(src=user.avatarUrl)
+      img.u-avatar(src=user.avatarUrl)
       h4.profile__username=user.name
+    if user.id == loggedUser.id
+    .user-profile__btn
+      a(href=`/users${routes.editProfile}`)
+        button 프로필 수정
+      a(href=`/users${routes.changePassword}`)
+        button 비밀번호 변경
