--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -2,13 +2,13 @@ extends layouts/main
 
 block content
   .form-container
-    form(action=`/users${routes.editProfile}`, method="post")
+    form(action=`/users${routes.editProfile}`, method="post", enctype="multipart/form-data")
       div.fileUpload
         label(for="avatar") 프로필 사진 업로드 : 
-        input(type="file", name="avatar", id="avatar")
-      input(type="text", placeholder="Name", name="name")
-      input(type="text", placeholder="Nickname", name="nickname")
-      input(type="email", placeholder='Email', name="email")
+        input(type="file", name="avatar", id="avatar", accept="image/*")
+      input(type="text", placeholder="Name", name="name", value=loggedUser.name)
+      input(type="email", placeholder='Email', name="email", value=loggedUser.email ,readonly)
+      p.edit-notice 이메일은 변경할 수 없습니다. 추후 업데이트 예정
       input(type="submit", value="확인")
     a.form-container__link(href=`/users${routes.changePassword}`) 
       button 비밀번호 변경
