--- a/assets/scss/partials/form.scss
+++ b/assets/scss/partials/form.scss
@@ -28,6 +28,12 @@
       color: white;
       font-weight: 700;
     }
+    .edit-notice {
+      margin-top: -20px;
+      margin-bottom: 15px;
+      padding-left: 10px;
+      color: gray;
+    }
   }
   a {
     width: 100%;
