--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,4 +1,5 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
   .user-profile
@@ -11,3 +12,11 @@ block content
           button 프로필 수정
         a(href=`/users${routes.changePassword}`)
           button 비밀번호 변경
+    .home-videos
+      each video in user.videos
+        +videoBlock({
+          id:video.id,
+          videoFile: video.fileUrl,
+          title: video.title,
+          views: video.views,
+        })
