--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -27,6 +27,11 @@
     .video__description {
       font-size: 15px;
     }
+    .video__author {
+      a {
+        color: #3498db;
+      }
+    }
   }
   .video__comments {
     margin-top: 25px;
