--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -6,17 +6,20 @@ block content
     .user-profile__header
       img.u-avatar(src=user.avatarUrl)
       h4.profile__username=user.name
-    if user.id == loggedUser.id
-      .user-profile__btn
-        a(href=`/users${routes.editProfile}`)
-          button 프로필 수정
-        a(href=`/users${routes.changePassword}`)
-          button 비밀번호 변경
-    .home-videos
-      each video in user.videos
-        +videoBlock({
-          id:video.id,
-          videoFile: video.fileUrl,
-          title: video.title,
-          views: video.views,
-        })
+    if loggedUser
+      if user.id == loggedUser.id
+        .user-profile__btn
+          a(href=`/users${routes.editProfile}`)
+            button 프로필 수정
+          a(href=`/users${routes.changePassword}`)
+            button 비밀번호 변경
+    .user-profile
+      span=user.name+"님의 업로드 영상"
+  .home-videos
+    each video in user.videos
+      +videoBlock({
+        id:video.id,
+        videoFile: video.fileUrl,
+        title: video.title,
+        views: video.views,
+      })
