--- a/assets/scss/pages/userDetail.scss
+++ b/assets/scss/pages/userDetail.scss
@@ -23,6 +23,7 @@
       max-width: 150px;
       display: flex;
       justify-content: center;
+      margin-bottom: 15px;
       button {
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         background: #368dff; /* fallback for old browsers */
@@ -30,8 +31,15 @@
         font-weight: 700;
       }
     }
-    a:not(:last-child) {
-      margin-bottom: 15px;
+    // a:not(:last-child) {
+    //   margin-bottom: 15px;
+    // }
+  }
+  .user-profile__name {
+    margin-bottom: 20px;
+    span {
+      font-size: 20px;
+      font-weight: 600;
     }
   }
 }
