비디오 전체창 클릭시 비디오 수직 가운데 정렬

--- a/assets/scss/partials/videoPlayer.scss
+++ b/assets/scss/partials/videoPlayer.scss
@@ -1,11 +1,14 @@
 .videoPlayer {
   position: relative;
+  display: flex;
+  align-items: center;
   &:hover {
     .videoPlayer__controls {
       opacity: 1;
     }
   }
   video {
+    width: 100%;
     max-width: 100%;
   }
   .videoPlayer__controls {
