--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,6 +4,7 @@ html(lang="ko")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    <link rel="shortcut icon" href="#">
     link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU", crossorigin="anonymous")
     link(rel="stylesheet", href="/static/styles.css")
     title #{siteName} | #{pageTitle}
@@ -17,4 +18,4 @@ html(lang="ko")
     include ../partials/footer.pug
     script(src="/static/main.js")
 
-    
+  
