--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -1,15 +1,18 @@
 mixin videoPlayer(video ={})
   .videoPlayer#jsVideoPlayer
-    video(src=`/${video.src}`)
+    video(src=`/${video.src}`)#videoId
     .videoPlayer__controls
       .videoPlayer__column
         span#jsVolumeButton
           i.fas.fa-volume-up
         span
-          |00:00 / 10:00
+          span#currentTime 00:00:00
+          |/&nbsp&nbsp
+          span#totalTime 00:00:00
       .videoPlayer__column
         span#jsPlayButton
           i.fas.fa-play
       .videoPlayer__column
         span#jsScreenButton
           i.fas.fa-expand
+  
