--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -3,9 +3,10 @@ mixin videoPlayer(video ={})
     video(src=`/${video.src}`)#videoId
     .videoPlayer__controls
       .videoPlayer__column
-        span#jsVolumeButton
-          i.fas.fa-volume-up
-        span
+        span#jsVolume.jsVolume
+          i.fas.fa-volume-up#jsVolumeButton
+        input.videoPlayer__volume#jsVolumeRange(type="range",min="0",max="1",step="0.1", value="1")
+        span.jsTimeSlide
           span#currentTime 00:00:00
           |/&nbsp&nbsp
           span#totalTime 00:00:00
@@ -15,4 +16,3 @@ mixin videoPlayer(video ={})
       .videoPlayer__column
         span#jsScreenButton
           i.fas.fa-expand
-  
