--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,6 +10,8 @@
 @import 'partials/socialLogin.scss';
 @import 'partials/videoBlock.scss';
 @import 'partials/videoPlayer.scss';
+@import 'partials/videoRecorder.scss';
+
 @import 'pages/videoDetail.scss';
 @import 'pages/home.scss';
 @import 'pages/userDetail.scss';
