--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -39,11 +39,13 @@
       font-size: 18px;
     }
   }
+  .comments-submit {
+    margin-bottom: 30px;
+  }
   .video__comments-box {
     width: 100%;
     display: flex;
     justify-content: left;
-    height: 70px;
     .u-avatar {
       width: 45px;
       height: 45px;
@@ -53,6 +55,7 @@
     .video__comments-enter {
       margin-left: 10px;
       width: 100%;
+      height: 100%;
       form {
         // comments에서 댓글 입력하는 부분
         .video__comments-input {
@@ -67,12 +70,7 @@
         input {
           background-color: #f5f5f5;
           border-radius: 0;
-          font-weight: 300;
-        }
-        // comments 전송 버튼
-        input:last-child {
-          background-color: gray;
-          color: white;
+          font-weight: 400;
         }
         // comments 취소, 전송버튼
         .video__comments-submit {
@@ -80,11 +78,39 @@
           display: flex;
           justify-content: flex-end;
           margin-top: 2px;
+          // comments 전송 버튼
+          input:last-child {
+            background-color: gray;
+            color: white;
+          }
           input {
             width: 100%;
             max-width: 70px;
             height: 35px;
             font-weight: 300;
+          }
+        }
+      }
+    }
+    // 댓글 보여지는 부분
+    .video__comments-list {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      max-width: 2000px;
+      .video__comments-main {
+        display: flex;
+        margin-bottom: 25px;
+        .video__comments-img {
+          display: flex;
+        }
+        .video__comments-content {
+          display: flex;
+          flex-direction: column;
+          margin-left: 15px;
+          span:first-child {
+            margin-bottom: 10px;
+            font-weight: 600;
           }
         }
       }
