--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -101,6 +101,7 @@
       .video__comments-main {
         display: flex;
         margin-bottom: 25px;
+        position: relative;
         .video__comments-img {
           display: flex;
         }
@@ -111,6 +112,25 @@
           span:first-child {
             margin-bottom: 10px;
             font-weight: 600;
+          }
+        }
+        .video__comments-menu {
+          position: absolute;
+          display: none;
+          top: 5px;
+          right: 25px;
+          color: gray;
+          font-size: 15px;
+          cursor: pointer;
+          //댓글 옵션 리스트
+          .video__comments-menu-list {
+            // display: none;
+            width: 50px;
+          }
+        }
+        &:hover {
+          .video__comments-menu {
+            display: block;
           }
         }
       }
