--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -103,6 +103,7 @@
         display: flex;
         margin-bottom: 25px;
         position: relative;
+        height: 55px;
         .video__comments-img {
           display: flex;
         }
@@ -123,23 +124,45 @@
           color: gray;
           font-size: 15px;
           cursor: pointer;
+          border: 0px;
+          background-color: rgba(255, 255, 255, 0);
         }
         &:hover {
-          .video__comments-menu {
+          .video__comments-menu,
+          .video__comments-menu-list {
             display: block;
           }
         }
         .video__comments-menu-list {
           // display: none;
           position: absolute;
-          display: none;
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          border-radius: 5px;
           top: 27px;
           right: 10px;
-          width: 50px;
-          border: 1px solid black;
-        }
-        .video__comments-menu-list-show {
-          display: block;
+          width: 70px;
+          display: none;
+          flex-direction: column;
+          justify-content: center;
+          font-size: 13px;
+          li {
+            padding: 3px 0px;
+            line-height: 26px;
+            display: flex;
+            justify-content: center;
+            &:hover {
+              background-color: lightgray;
+            }
+            button {
+              color: gray;
+              border: 0px;
+              background-color: rgba(255, 255, 255, 0);
+              width: 100%;
+              &:active {
+                background-color: white;
+              }
+            }
+          }
         }
       }
     }
